examples/test/testpolicy12739.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12739
  namespace: namespace96
spec:
  podSelector:
    matchLabels:
      key35: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value49
          key30: value32
      podSelector:
        matchLabels:
          key11: value31
          key27: value7
          key38: value5
